--- a/eoffice_korem/build.gradle
+++ b/eoffice_korem/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "com.jaylangkung.eoffice_korem"
         minSdk 24
         targetSdk 33
-        versionCode 4
-        versionName "Beta 1.2"
+        versionCode 6
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -25,13 +25,11 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
-        applicationVariants.all {
-            variant ->
-                variant.outputs.each {
-                    output ->
-                        def name = "eoffice-Korem-083-BDJ.apk"
-                        output.outputFileName = name
-                }
+        applicationVariants.all { variant ->
+            variant.outputs.each { output ->
+                def name = "eoffice-Korem-083-BDJ.apk"
+                output.outputFileName = name
+            }
         }
     }
     compileOptions {
@@ -49,24 +47,24 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.google.firebase:firebase-messaging:23.1.2'
+    implementation 'com.google.firebase:firebase-messaging:23.2.1'
     implementation 'com.google.maps.android:android-maps-utils:2.4.0'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     //room
-    implementation 'androidx.room:room-runtime:2.5.0'
-    kapt 'androidx.room:room-compiler:2.5.0'
-    implementation 'androidx.room:room-ktx:2.5.0'
+    implementation 'androidx.room:room-runtime:2.5.2'
+    kapt 'androidx.room:room-compiler:2.5.2'
+    implementation 'androidx.room:room-ktx:2.5.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     //firebase
     implementation platform('com.google.firebase:firebase-bom:31.2.2')
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.1.2'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.2.1'
     implementation 'com.google.firebase:firebase-analytics-ktx:21.3.0'
 
     //Retrofit
@@ -76,7 +74,7 @@ dependencies {
     debugImplementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.9'
 
     //recyclerview & card view
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation 'androidx.cardview:cardview:1.0.0'
 
     //Toasty
@@ -87,7 +85,7 @@ dependencies {
 
     //Loading Animation
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
-    implementation 'com.github.chandreshandroid:MaterialProgressButton:1.6'
+    implementation 'com.github.chandreshandroid:MaterialProgressButton:1.7'
 
     //qrcode reader
     implementation 'com.budiyev.android:code-scanner:2.1.0'
@@ -102,7 +100,7 @@ dependencies {
 
     //image getter from internet
     implementation 'com.github.bumptech.glide:glide:4.14.1'
-    kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.14.1'
 
     // dependency for slider view
     implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
